Setup new docs page, small fixes in the definition